# Neil-Agent

./: .env.example  .gitignore  AGENTS.md  DevelopmentRecords.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  claude-code-review.md  non-interactive.md  sandbox-assessment.md  visualization-development.md
evals/: tasks.json
src/neil_agent/: __init__.py  __main__.py  activity.py  agent.py  approval.py  audit.py  checkpoint.py  cli.py  cockpit.py  config.py  context.py  diagnostics.py  errors.py  evals.py  events.py  hooks.py  instructions.py  llm.py  noninteractive.py  schemas.py  session.py  task.py
src/neil_agent/tools/: __init__.py  filesystem.py  registry.py  shell.py
tests/: test_activity.py  test_agent.py  test_approval.py  test_audit.py  test_checkpoint.py  test_cli.py  test_cockpit.py  test_config.py  test_context.py  test_diagnostics.py  test_errors.py  test_evals.py  test_events.py  test_hooks.py  test_instructions.py  test_llm.py  test_noninteractive.py  test_permissions.py  test_schemas.py  test_session.py  test_shell.py  test_task.py  test_tools.py
tests/fixtures/: noninteractive_protocol_v1.json  noninteractive_protocol_v2.json
