[project]
name = "neil-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "zyohhh", email = "zyohhh@163.com" }
]
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.116.0",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.2.2",
    "rich>=15.0.0",
    "typer>=0.26.8",
]

[project.scripts]
neil-agent = "neil_agent:main"

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "mypy>=2.3.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "ruff>=0.15.21",
]
